HostingARM/nestedtemplates/NSG_FrontEnd.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "secGroupName": {
      "type": "string",
      "metadata": {
        "description": "Name of the Security Group."
      }
    },
    "subnetAddrPrefix": {
      "type": "string",
      "metadata": {
        "description": "The prefix for the subnet."
      }
    },
    "_artifactsLocation": {
      "type": "string",
      "metadata": {
        "description": "The location of resources, such as templates and DSC modules, that the template depends on"
      },
      "defaultValue": "https://raw.githubusercontent.com/mattp65/ARM-Templates/master/HostingARM"
    }
  },
  "variables": {
  },
  "resources": [
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('secGroupName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "INT_http",
            "properties": {
              "description": "INT_http",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "[parameters('subnetAddrPrefix')]",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "INT_https",
            "properties": {
              "description": "INT_https",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "433",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "[parameters('subnetAddrPrefix')]",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "INT_rdp",
            "properties": {
              "description": "INT_rdp",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3889",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "[parameters('subnetAddrPrefix')]",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          }
        ]
      }
    }
  ]
}
