HostingARM/nestedtemplates/VNET_1SubnetX.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "securityGroupName": {
            "type": "string",
            "metadata": {
                "description": "Name of the Network Security Group."
            }
        },
        "virtualNetworkName": {
            "type": "string",
            "metadata": {
                "description": "Name of the VNET."
            }
        },
        "addressSpace": {
            "type": "string",
            "metadata": {
                "description": "Address space for the VNET."
            }
        },
        "subnet1Name": {
            "type": "string",
            "defaultValue": "FrontEnd",
            "metadata": {
                "description": "Name of the first subnet in the VNET. Please note, an additional subnet called GatewaySubnet will be created where the VirtualNetworkGateway will be deployed. The name of that subnet must not be changed from GatewaySubnet."
            }
        },
        "subnet1AddrPrefix": {
            "type": "string",
            "metadata": {
                "description": "The prefix for the first subnet in the VNET."
            }
        },
        "gwSubnetAddrPrefix": {
            "type": "string",
            "metadata": {
                "description": "The prefix for the GatewaySubnet where the VirtualNetworkGateway will be deployed. This must be at least /29."
            }
        },
        "gatewayPublicIPName": {
            "type": "string",
            "metadata": {
                "description": "The name of the PublicIP attached to the VirtualNetworkGateway."
            }
        },
        "gatewayIPConf": {
            "type": "string",
            "metadata": {
                "description": "The name of the Gateway IP Config attached to the VirtualNetworkGateway."
            }
        },
        "gatewayName": {
            "type": "string",
            "metadata": {
                "description": "The name of the VirtualNetworkGateway."
            }
        }
    },
    "variables": {
    },
    "resources": [
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('securityGroupName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "webrule",
                        "properties": {
                            "description": "This rule allows traffic in on port 80",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "INTERNET",
                            "destinationAddressPrefix": "[parameters('subnet1AddrPrefix')]",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "httpsrule",
                        "properties": {
                            "description": "This rule allows traffic in on port 443",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "INTERNET",
                            "destinationAddressPrefix": "[parameters('subnet1AddrPrefix')]",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "rdprule",
                        "properties": {
                            "description": "This rule allows traffic on port 3389 from the web",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "INTERNET",
                            "destinationAddressPrefix": "[parameters('subnet1AddrPrefix')]",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('virtualNetworkName')]",
            "type": "Microsoft.Network/virtualNetworks",
            "location": "[resourceGroup().location]",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', [parameters('securityGroupName')])]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('addressSpace')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('subnet1Name')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnet1AddrPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', [parameters('securityGroupName')])]"
                            }
                        }
                    },
                    {
                        "name": "GatewaySubnet",
                        "properties": {
                            "addressPrefix": "[parameters('gwSubnetAddrPrefix')]"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('gatewayPublicIPName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic"
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/virtualNetworkGateways",
            "name": "[parameters('gatewayName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', parameters('gatewayPublicIPName'))]",
                "[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[parameters('gwSubnetAddrPrefix')]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses',parameters('gatewayPublicIPName'))]"
                            }
                        },
                        "name": "[parameters('gatewayIPConf')]"
                    }
                ],
                "gatewayType": "Vpn",
                "vpnType": "RouteBased",
                "enableBgp": "false"
            }
        }
    ]
}
